--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,12 @@ repositories {
         name = "papermc-repo"
         url = "https://repo.papermc.io/repository/maven-public/"
     }
+    maven { url = "https://repo.glaremasters.me/repository/public/" } // PacketEvents
 }
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
+    compileOnly("com.github.retrooper:packetevents-spigot:2.9.5")
 }
 
 tasks {
