--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ plugins {
 }
 
 group = 'kr.dorondo'
-version = '1.0-SNAPSHOT'
+version = '1.5'
+
+def mc = "1.21.8"
+def dic = (mc == "1.21.8") ? "D:\\Develop\\1.21.8플러그인개발\\plugins" : "D:\\Develop\\1.21.8플러그인개발\\plugins_otherversions"
+
 
 repositories {
     mavenCentral()
@@ -17,10 +21,15 @@ repositories {
 }
 
 dependencies {
-    paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:1.21.8-R0.1-SNAPSHOT")
-    compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
+    paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:${mc}-R0.1-SNAPSHOT")
     compileOnly("com.github.retrooper:packetevents-spigot:2.9.5")
 }
+
+paperweight {
+    reobfArtifactConfiguration = io.papermc.paperweight.userdev.ReobfArtifactConfiguration.getMOJANG_PRODUCTION()
+}
+
+
 
 tasks {
     runServer {
@@ -58,7 +67,7 @@ processResources {
     }
 }
 
-tasks.jar{
-    archiveFileName = 'DisplayHud.jar'
-    destinationDirectory = file('D:\\Develop\\1.21.8플러그인개발\\plugins')
+tasks.named("jar") {
+    archiveFileName = "DisplayHud${mc}.jar"
+    destinationDirectory = file(dic)
 }
